Added password verifycation

--- a/Views/Authorize/SignIn.cshtml
+++ b/Views/Authorize/SignIn.cshtml
@@ -13,6 +13,11 @@
         <label>Password</label>
         <br />
         <input type="password" name="pass" width="70" />
+
+        <br />
+        <label>Repeat password</label>
+        <br />
+        <input type="password" name="repeatPass" width="70" />
         <br />
         <input type="submit" value="Login" />
     </form>
